--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
    <div class="inputBox">
     <input type="text" required = "required">
-    <span>BUSCAR</span>
+    <span>NOMBRE</span>
 
    </div>
    <div class="inputBox">
     <input type="text" required = "required">
-    <span>BUSCAR 1</span>
+    <span>APELLIDOS</span>
 
    </div>
 
-   <a href="#"><span>BOTON</span><i></i></a>
+   <a href="#" style="--clr:#1e9bff"><span>BOTON</span><i></i></a>
 </body>
 </html>
